Fixed another alignment issue when it's full screen

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body{
 
 div.post {
 
-    width: 65%;
+    width: 60%;
     padding: 0px;
     border: 25px black;
     margin: 25px;
